[all] Upgrade to Java 11.
close #178

Signed-off-by: Stéphane Galland <galland@arakhne.org>