@@ -30,9 +30,7 @@ import org.eclipse.xtext.xbase.lib.Pure;
 
 import org.arakhne.afc.math.tree.TreeNode;
 
-
-/**
- * This is the generic implementation of a n-ary
+/** This is the generic implementation of a n-ary
  * tree. This node has not a constant count of children.
  * Indeed when a child node was removed, the count of children
  * is also changed. It also means that a child node is never
@@ -430,7 +428,7 @@ public abstract class NaryTreeNode<D, N extends NaryTreeNode<D, N>> extends Abst
 	@Override
 	protected void getHeights(int currentHeight, List<Integer> heights) {
 		if (isLeaf()) {
-			heights.add(new Integer(currentHeight));
+			heights.add(Integer.valueOf(currentHeight));
 		} else {
 			for (final N child : this.children) {
 				if (child != null) {
