@@ -30,9 +30,7 @@ import org.eclipse.xtext.xbase.lib.Pure;
 import org.arakhne.afc.math.MathUtil;
 import org.arakhne.afc.math.tree.TreeNode;
 
-
-/**
- * This is the generic implementation of a
+/** This is the generic implementation of a
  * tree for which each node has four children.
  *
  * <h3>moveTo</h3>
@@ -595,7 +593,7 @@ public abstract class QuadTreeNode<D, N extends QuadTreeNode<D, N>> extends Abst
 	@Override
 	protected void getHeights(int currentHeight, List<Integer> heights) {
 		if (isLeaf()) {
-			heights.add(new Integer(currentHeight));
+			heights.add(Integer.valueOf(currentHeight));
 		} else {
 			if (this.nNorthWest != null) {
 				this.nNorthWest.getHeights(currentHeight + 1, heights);
